- primary creep accounted for -> exponent of the primary creep - reversible -> kinecically reversible - creep/recovery => viscous dissipation and negligible amount of plastic events - viré les pre-cracks - Aknowledge Gareth

--- a/creep/creep_yaourt.tex
+++ b/creep/creep_yaourt.tex
@@ -41,7 +41,7 @@
 \date{\today}
 
 \begin{abstract}
-Biomaterials such as protein or polysaccharide gels are known to behave qualitatively as soft solids and to rupture under an external load. Combining optical and ultrasonic imaging to shear rheology we show that the failure scenario of a protein gel is typical of brittle solids: after a power-law creep regime fully accounted for by linear viscoelasticity and homogeneous deformation, fractures nucleate and grow logarithmically perpendicularly to shear up to sudden rupture. A single equation accounting for those two successive processes nicely captures the full rheological response. The failure time follows a decreasing power-law with the applied shear stress strongly reminiscent of the Basquin law of fatigue for solids. These results are in excellent agreement with recent fiber-bundle models that include damage accumulation on elastic fibers and exemplify protein gels as model brittle soft solids.
+Biomaterials such as protein or polysaccharide gels are known to behave qualitatively as soft solids and to rupture under an external load. Combining optical and ultrasonic imaging to shear rheology we show that the failure scenario of a protein gel is typical of brittle solids: \textcolor{blue}{after an homogeneous-deformation power-law creep regime whoes exponent is fully accounted for by linear viscoelasticity}, fractures nucleate and grow logarithmically perpendicularly to shear up to sudden rupture. A single equation accounting for those two successive processes nicely captures the full rheological response. The failure time follows a decreasing power-law with the applied shear stress strongly reminiscent of the Basquin law of fatigue for solids. These results are in excellent agreement with recent fiber-bundle models that include damage accumulation on elastic fibers and exemplify protein gels as model brittle soft solids.
 \end{abstract}
 
 \pacs{}
@@ -60,7 +60,7 @@ Biogels formed through the self-association of polysaccharide coils, collagen, a
 \end{figure} 
 %%%%%%%%%%%%
 
-In this Letter we report on stress-induced fracture in protein gels by means of creep experiments coupled to optical and ultrasonic imaging. Gels formed by slow acidification of a sodium caseinate solution \cite{Lucey:1998} display fractures under large strain at fixed low pH values \cite{vanVliet:1995}, which makes them perfect candidates to quantify brittleness in soft solids and tackle the above-mentioned issues. We demonstrate that under an external load, these casein gels display brittle-like failure that results from two successive physical processes: a reversible primary creep regime characterized by a homogeneous strain field and the irreversible nucleation and fracture growth leading to gel failure. Our results are in full agreement with the predictions of some recent fiber-bundle models and hint to universal features of brittle failure common to both soft and hard solids.
+In this Letter we report on stress-induced fracture in protein gels by means of creep experiments coupled to optical and ultrasonic imaging. Gels formed by slow acidification of a sodium caseinate solution \cite{Lucey:1998} display fractures under large strain at fixed low pH values \cite{vanVliet:1995}, which makes them perfect candidates to quantify brittleness in soft solids and tackle the above-mentioned issues. We demonstrate that under an external load, these casein gels display brittle-like failure that results from two successive physical processes: a \textcolor{blue}{kinetically} reversible primary creep regime characterized by a homogeneous strain field and the irreversible nucleation and fracture growth leading to gel failure. Our results are in full agreement with the predictions of some recent fiber-bundle models and hint to universal features of brittle failure common to both soft and hard solids.
 
 %%%%%%%%%%%%
 \begin{figure}
@@ -78,14 +78,14 @@ Under a constant applied shear stress $\sigma$, the global strain $\gamma(t)$ di
 \begin{figure*}[t]
 \centering
 \includegraphics[width=17.5cm,clip]{Fig3.eps}
-\caption{(color online) Ultrasonic images (left) and direct visualization of the Couette cell (right) recorded simultaneously at various times in the primary [(a)~$t/\tau_f=0.02$], secondary [(b)~$t/\tau_f=0.57\simeq\taum/\tau_f$], and tertiary  [(c) $t/\tau_f=0.93$ and (d) 0.99] creep regimes. Ultrasonic images are velocity maps $v(r,z,t)$ computed by averaging over 4~s and coded using the linear color levels shown below the images. Their position relative to the picture of the cell reflects the actual arrangement of the ultrasonic probe along the vertical direction $z$. The gap width is 2~mm and $r$ is the radial distance to the inner rotating cylinder. Experiment performed on a 4\%~wt. casein gel seeded with 3\%~wt. polyamide spheres and acidified with 1\%~wt. GDL under $\sigma=300$~Pa. See also Movie~2 in the Supplemental Material.
+\caption{(color online) Ultrasonic images (left) and direct visualization of the Couette cell (right) recorded simultaneously at various times in the primary [(a)~$t/\tau_f=0.02$], secondary [(b)~$t/\tau_f=0.57\simeq\taum/\tau_f$], and tertiary  [(c) $t/\tau_f=0.93$ and (d) 0.99] creep regimes. Ultrasonic images are \textcolor{blue}{azimuthal} velocity maps $v(r,z,t)$ computed by averaging over 4~s and coded using the linear color levels shown below the images. Their position relative to the picture of the cell reflects the actual arrangement of the ultrasonic probe along the vertical direction $z$. The gap width is 2~mm and $r$ is the radial distance to the inner rotating cylinder. Experiment performed on a 4\%~wt. casein gel seeded with 3\%~wt. polyamide spheres and acidified with 1\%~wt. GDL under $\sigma=300$~Pa. See also Movie~2 in the Supplemental Material.
 \label{fig3}}
 \end{figure*} 
 %%%%%%%%%%%%
 
-As seen in the inset of Fig.~\ref{fig1}, the failure time $\tau_f$ sharply decreases as a power-law of $\sigma$ with an exponent $\beta\simeq 5.5$. $\tau_f$ further allows us to rescale all the shear rate data $\gp(t)$ onto the single master curve of Fig.~\ref{fig2}(a) by plotting $\gp/\gp_{\rm min}$ vs $t/\tau_f$, where $\gp_{\rm min}$ is the minimum shear rate reached at a time $\tau_{\rm min}$ [see also Fig.~\ref{suppfig2} in the Supplemental Material for the original $\gp(t)$ data]. On about four decades for $t\lesssim 0.1\tau_f$, the shear rate decreases as a power-law $\gp(t)\sim t^{-\alpha}$ with $\alpha=0.85\pm 0.02$. This is strongly reminiscent of the {\it primary creep} observed in solids and referred to as Andrade creep \cite{Andrade:1910,Miguel:2002,Nechad:2005}. Interestingly, here, this scaling can be fully accounted for by linear viscoelasticity without invoking any irreversible plasticity. Indeed casein gels display a power-law rheology $G'(f)\sim G''(f)\sim f^{0.15}$ [inset of Fig.~\ref{fig2}(a)], which corresponds to a compliance $J(t)\equiv\gamma(t)/\sigma\sim t^{0.15}$ in the linear deformation regime \cite{Tschoegl:1989}. This nicely corresponds to the observed $\gp(t)\sim t^{-0.85}$ and suggests that primary creep is purely reversible without unrecoverable plastic events. Homogeneity and linear response are further confirmed, at least up to the available spatial ($\sim 10~\mu$m) and temporal ($\sim 1$~s) resolutions, by direct visualization which shows no sign of crack or fracture [Fig.~\ref{fig3}(a)] and by ultrasonic imaging which reveals velocity and strain fields averaged over the vertical direction $z$ that linearly decrease with the radial position $r$ within the gap [Fig.~\ref{fig4}(a-b)] with insignificant $z$-dependence [Fig.~\ref{fig3}(a, left)] and no slippage at the Plexiglas walls.
+As seen in the inset of Fig.~\ref{fig1}, the failure time $\tau_f$ sharply decreases as a power-law of $\sigma$ with an exponent $\beta\simeq 5.5$. $\tau_f$ further allows us to rescale all the shear rate data $\gp(t)$ onto the single master curve of Fig.~\ref{fig2}(a) by plotting $\gp/\gp_{\rm min}$ vs $t/\tau_f$, where $\gp_{\rm min}$ is the minimum shear rate reached at a time $\tau_{\rm min}$ [see also Fig.~\ref{suppfig2} in the Supplemental Material for the original $\gp(t)$ data]. On about four decades for $t\lesssim 0.1\tau_f$, the shear rate decreases as a power-law $\gp(t)\sim t^{-\alpha}$ with $\alpha=0.85\pm 0.02$. This is strongly reminiscent of the {\it primary creep} observed in solids and referred to as Andrade creep \cite{Andrade:1910,Miguel:2002,Nechad:2005}. Interestingly, here, \textcolor{blue}{the exponent} can be fully accounted for by linear viscoelasticity without invoking any irreversible plasticity. Indeed casein gels display a power-law rheology $G'(f)\sim G''(f)\sim f^{0.15}$ [inset of Fig.~\ref{fig2}(a)], which corresponds to a compliance $J(t)\equiv\gamma(t)/\sigma\sim t^{0.15}$ in the linear deformation regime \cite{Tschoegl:1989}. This nicely corresponds to the observed $\gp(t)\sim t^{-0.85}$ and suggests that primary creep is \textcolor{blue}{\textit{kinetically} reversible, i.e. with a negligible amount of unrecoverable plastic events}. Homogeneity and linear response are further confirmed, at least up to the available spatial ($\sim 10~\mu$m) and temporal ($\sim 1$~s) resolutions, by direct visualization which shows no sign of crack or fracture [Fig.~\ref{fig3}(a)] and by ultrasonic imaging which reveals velocity and strain fields averaged over the vertical direction $z$ that linearly decrease with the radial position $r$ within the gap [Fig.~\ref{fig4}(a-b)] with insignificant $z$-dependence [Fig.~\ref{fig3}(a, left)] and no slippage at the Plexiglas walls. \textcolor{blue}{To go one step further we have performed creep/recovery experiments limited to the primary creep regime (see Fig.~\ref{suppfig3}) that show almost complete recovery. The remaining deformation can be attributed mainly to viscous dissipation in the solvent since when the strain is reset to zero, i.e. the moving tool is moved back to its initial position, the same loading induces the same response. Undistinguishable linear reology measured before each cycle (see Fig.~\ref{suppfig4}) further rules out significant plastic events, although microscopic observation may found a negligible amount of damaged fibers.}
 
-For $0.1\lesssim t/\tau_f\lesssim 0.9$, $\gp(t)$ departs from power-law behavior and goes through a minimum value at time $\tau_{\rm min}= (0.56\pm0.04)\tau_f$ independently of the applied stress [Fig.~\ref{fig2}(b) and inset] as similarly reported for metals \cite{Sundararajan:1989}, solid composite materials \cite{Nechad:2005} and fiber-bundles models (FBMs) \cite{Kovacs:2008,Jagla:2011}. This linearity between $\tau_{\rm min}$ and $\tau_f$, also known as the Monkman-Grant relation \cite{Monkman:1956}, allows one to ``predict'' the failure time from the intermediate-time response. During this {\it secondary creep} regime, regularly-spaced cracks nucleate from the top and bottom edges of the Couette cell and start growing perpendicular to the applied stress [Fig.~\ref{fig3}(b), see also Movie~2 in the Supplemental Material]. These macroscopic fractures are invaded with water expelled from the surrounding gel matrix. Although fractures have not yet entered the ultrasonic region of interest, velocity maps become heterogeneous along the $z$ direction [Fig.~\ref{fig3}(b, left)] and display intermittent fluctuations [Fig~\ref{fig4}(c,d)]. The level of these fluctuations, which can also be seen on the global response for the same applied stress [\textcolor{red!50!black}{$\blacktriangledown$} in Fig.~\ref{fig2}(b)], is poorly reproducible and stress-dependent. We propose that such intermittency arises from microscopic cracks ahead of the fracture tip. Since heterogeneity is much smaller along the radial direction [compare red and black lines in Fig~\ref{fig4}(d)], these ``precursors'' either extend across the full 2-mm gap or induce long-range displacements that span the gap. In any case, such noisy features are typical of slow crack growth in solids \cite{Vanel:2009,Kun:2007} and more generally of avalanche behavior \cite{Sethna:2001}.
+For $0.1\lesssim t/\tau_f\lesssim 0.9$, $\gp(t)$ departs from power-law behavior and goes through a minimum value at time $\tau_{\rm min}= (0.56\pm0.04)\tau_f$ independently of the applied stress [Fig.~\ref{fig2}(b) and inset] as similarly reported for metals \cite{Sundararajan:1989}, solid composite materials \cite{Nechad:2005} and fiber-bundles models (FBMs) \cite{Kovacs:2008,Jagla:2011}. This linearity between $\tau_{\rm min}$ and $\tau_f$, also known as the Monkman-Grant relation \cite{Monkman:1956}, allows one to ``predict'' the failure time from the intermediate-time response. During this {\it secondary creep} regime, regularly-spaced cracks nucleate from the top and bottom edges of the Couette cell and start growing perpendicular to the applied stress [Fig.~\ref{fig3}(b), see also Movie~2 in the Supplemental Material]. These macroscopic fractures are invaded with water expelled from the surrounding gel matrix. Although fractures have not yet entered the ultrasonic region of interest, velocity maps become heterogeneous along the $z$ direction [Fig.~\ref{fig3}(b, left)] and display intermittent fluctuations [Fig~\ref{fig4}(c,d)]. The level of these fluctuations, which can also be seen on the global response for the same applied stress [\textcolor{red!50!black}{$\blacktriangledown$} in Fig.~\ref{fig2}(b)], is poorly reproducible and stress-dependent. \textcolor{blue}{Such intermittency may arises from the growth of cracks outside the region of interest, inducing elastic deformation propagating in the sample. The much smaller heterogeneity along the radial direction [compare red and black lines in Fig~\ref{fig4}(d)] is coherent with induced long-range displacements that span the gap.} In any case, such noisy features are typical of slow crack growth in solids \cite{Vanel:2009,Kun:2007} and more generally of avalanche behavior \cite{Sethna:2001}.
 
 In the {\it tertiary creep} regime, for $t\gtrsim 0.9\tau_f$, the shear rate increases by more than four orders of magnitude and diverges as $(\tau_f-t)^{-1}$ [Fig.~\ref{fig2}(c)]. This finite-time singularity corresponds to the final growth of the fractures along the vorticity direction $z$ as they accelerate and eventually meet in the middle of the Couette cell at time $\tau_f$ [Fig.~\ref{fig3}(c-d)]. Ultrasonic velocity maps directly correlate with the crack growth and reveal the complex structure of the displacement field at the tip and around the fracture. In particular, Fig.~\ref{fig3}(d, left) suggests that the fracture is initiated at the inner cylinder at $r=0$ and the presence of large positive and negative velocities in the vicinity of the crack tip is indicative of strong compression and recoil of the gel matrix. Finally, the fracture length $\ell(t)$ is observed to grow logarithmically with $(\tau_f-t)$ upon approaching $\tau_f$ [Fig~\ref{fig4}(d)]. In other words one has ${\rm d}\ell/{\rm d}t\sim\gp(t)\sim (\tau_f-t)^{-1}$, which indicates that the global shear rate is linked to fracture-induced displacements.
 
@@ -98,7 +98,7 @@ In the {\it tertiary creep} regime, for $t\gtrsim 0.9\tau_f$, the shear rate inc
 \end{figure*} 
 %%%%%%%%%%%%
 
-Finally, we emphasize that the (reversible) Andrade-like creep and the (irreversible) crack growth are two  physical processes that effectively superimpose to yield the global rheological response. Indeed, as seen from the yellow line in Fig.~\ref{fig2}, the master curve $\gp(t)/\gp_{\rm min}$ vs $t/\tau_f$ is perfectly fitted by:
+Finally, we emphasize that the (\textcolor{blue}{kinetically} reversible) Andrade-like creep and the (irreversible) crack growth are two  physical processes that effectively superimpose to yield the global rheological response. Indeed, as seen from the yellow line in Fig.~\ref{fig2}, the master curve $\gp(t)/\gp_{\rm min}$ vs $t/\tau_f$ is perfectly fitted by:
 %the master curve $\tilde{\gp}(t)=\gp(t)/\gp_{\rm min}$ vs $\tilde{t}=t/\tau_f$ is perfectly fitted by:
 \begin{equation}
 \frac{\gp(t)}{\gp_{\rm min}}=\lambda \left(\frac{t}{\tau_f}\right)^{-\alpha}+ \frac{\mu}{1-t/\tau_f}\,,
@@ -107,7 +107,7 @@ Finally, we emphasize that the (reversible) Andrade-like creep and the (irrevers
 \end{equation}
 with only two adjustable parameters $\lambda$ and $\mu$ once $\alpha=0.85$ is fixed. The remarkable collapse of the whole data set to such a simple equation allows us to interpret the secondary creep regime as a mere crossover from creep to crack growth.
 
-Let us now summarize and discuss the most prominent results of this Letter. First we have shown that casein gels display a remarkable failure scenario similar to that of brittle solids and characterized by the same three successive creep regimes. Here, the primary creep and its power-law exponent [$\gp(t)\sim t^{-\alpha}$ with $\alpha=0.85\pm 0.02$] are fully accounted for by linear viscoelasticity and local measurements consistently display a homogeneous bulk deformation. Such a link between creep and viscoelasticity is shared by other biopolymer gels with power-law rheology \cite{Gobeaux:2010,Jaishankar:2013} as well as hard-sphere-like colloidal glasses \cite{Siebenburger:2012}. Protein gels thus appear to remain purely elastic and reversible throughout primary creep, a hallmark of brittle materials. By contrast primary creep in solids is irreversible and has been attributed to dislocation interactions in the case of crystalline materials \cite{Miguel:2002} or to localized plastic rearrangements in amorphous materials \cite{Rosti:2010}. 
+Let us now summarize and discuss the most prominent results of this Letter. First we have shown that casein gels display a remarkable failure scenario similar to that of brittle solids and characterized by the same three successive creep regimes. Here, the power-law exponent of the primary creep [$\gp(t)\sim t^{-\alpha}$ with $\alpha=0.85\pm 0.02$] is fully accounted for by linear viscoelasticity and local measurements consistently display a homogeneous bulk deformation. Such a link between creep and viscoelasticity is shared by other biopolymer gels with power-law rheology \cite{Gobeaux:2010,Jaishankar:2013} as well as hard-sphere-like colloidal glasses \cite{Siebenburger:2012}. Protein gels thus appear to remain purely elastic and \textcolor{blue}{kinetically} reversible throughout primary creep, a hallmark of brittle materials. By contrast primary creep in solids is irreversible and has been attributed to dislocation interactions in the case of crystalline materials \cite{Miguel:2002} or to localized plastic rearrangements in amorphous materials \cite{Rosti:2010}. 
 
 The logarithmic fracture growth in the tertiary creep regime constitutes our second important result. Such an evolution is also commonly reported in disordered solid materials displaying brittle rupture and interpreted in the framework of Griffith-like models based on global or local energy barriers \cite{Vanel:2009}. However these approaches all predict exponential scalings for $\tau_f(\sigma)$ while our data are best fitted by the decreasing power-law $\tau_f \sim \sigma^{-\beta}$ with $\beta=5.45\pm 0.05$ [inset of Fig.~\ref{fig1}]. This last key result suggests that thermally activated crack growth is not relevant to the present soft solid. Rather the power-law scaling is strikingly reminiscent of the Basquin law of fatigue found for a variety of heterogeneous or cellular materials under cyclic deformation \cite{Kun:2007,Basquin:1910,Kohout:2000}. Basquin law has also been recently predicted by FBMs that combine elastic fibers with a local yield strain and take into account damage accumulation \cite{Kun:2007,Halasz:2012}. Interestingly assuming damage accumulation to be proportional to $\sigma^\gamma$ directly leads to Basquin law with $\beta=\gamma$ and large values of $\gamma$, typically larger than 5 as found here for $\beta$, lead to macroscopic cracks due to the simultaneous rupture of a large number of fibers \cite{Halasz:2012}. More generally FBMs under compressive or elongational load predict three successive creep regimes exactly alike Fig.~\ref{fig2} with similar proportionality between $\tau_{\rm min}$ and $\tau_f$ and finite-time singularity \cite{Nechad:2005,Jagla:2011}. This highlights the relevance of FBMs in the context of creep in protein gels, whose microstructure indeed appears to be formed of strands \cite{Kalab:1983,Roefs:1990}, but also urges to study FBMs in shear geometries to check whether they would be able to predict fracture growth as observed here.
 
@@ -128,7 +128,7 @@ To conclude, the present time- and space-resolved study shows that protein gels 
 %and yield stress fluids (YSFs) \cite{Bauer:2006,Divoux:2011,Siebenburger:2012,Grenard:2013} that usually exhibit a power-law creep with smaller exponents (0.3 $\lesssim \alpha \lesssim 0.7$) which are not directly related to linear rheology. Besides, the linear behavior of YSF generally differs from a simple power-law scaling, while in the case of solids
 
 \begin{acknowledgments}
-The authors thank T.~Gibaud, S.~Lindstr\"om and N.~Taberlet for fruitful discussions, M.~Kal\'ab for kindly providing us with unobtainable references, and A.~Parker at Firmenich for precious advice and for providing the casein and GDL. This work was funded by the Institut Universitaire de France and by the European Research Council under the European Union's Seventh Framework Programme (FP7/2007-2013) / ERC grant agreement No.~258803. 
+The authors thank T.~Gibaud, S.~Lindstr\"om\textcolor{blue}{, G.H.~McKinley} and N.~Taberlet for fruitful discussions, M.~Kal\'ab for kindly providing us with unobtainable references, and A.~Parker at Firmenich for precious advice and for providing the casein and GDL. This work was funded by the Institut Universitaire de France and by the European Research Council under the European Union's Seventh Framework Programme (FP7/2007-2013) / ERC grant agreement No.~258803. 
 \end{acknowledgments}
 
 \begin{thebibliography}{}
